Simple demo of UI components require to create a android layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">ComposeActivity</string>
+    <string name="app_name">Compose Demos</string>
+    <string name="simple_button">Simple Button</string>
+    <string name="rounded_button">Rounded Button</string>
 </resources>
